--- a/src/components/UserPortal/OrganizationCard/OrganizationCard.module.css
+++ b/src/components/UserPortal/OrganizationCard/OrganizationCard.module.css
@@ -7,6 +7,7 @@
   background-color: white;
   border-radius: 10px;
   box-shadow: 2px 2px 8px 0px #c8c8c8;
+  overflow: hidden;
 }
 
 .organizationDetails {
