Initial login page work

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,11 @@
+// Colors
+:root {
+  --bs-body-bg: #f2f7ff;
+}
+
 $primary: #31bb6b;
-$success: #31bb6b;
 $secondary: #707070;
+$success: #31bb6b;
 $warning: #febc59;
+
+// Colors
