--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,11 +1,23 @@
 // Colors
-:root {
-  --bs-body-bg: #f2f7ff;
-}
 
 $primary: #31bb6b;
 $secondary: #707070;
 $success: #31bb6b;
 $warning: #febc59;
 
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
+
 // Colors
+
+// Links
+$link-color: $blue !default;
+$link-decoration: none !default;
