Fixed UI issue for navbar and login

--- a/src/components/ListNavbar/ListNavbar.module.css
+++ b/src/components/ListNavbar/ListNavbar.module.css
@@ -1,5 +1,5 @@
 .navbarbgOrglist {
-  /* height:60px;  */
+  position: relative !important;
   padding: 0 1rem;
   background-color: white;
   display: flex;
