--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -1,16 +1,6 @@
-.modal {
-  margin-right: 2rem;
-}
-
-.main {
-  float: left;
-  display: block;
-}
-
 .navbarbg {
-  /* height: 60px; */
-  height: auto;
-  background-color: white;
+  position: relative !important;
+  margin-bottom: 1.5rem;
   z-index: 1;
   box-shadow: 0px 0px 8px 2px #c8c8c8;
   padding-top: 0px;
