--- a/src/components/OrgPostCard/OrgPostCard.module.css
+++ b/src/components/OrgPostCard/OrgPostCard.module.css
@@ -5,11 +5,109 @@
   font-size: 17px;
 }
 .postimage {
-  border-radius: 6px;
+  border-radius: 0px;
   width: 100%;
-  max-width: 240px;
-  height: 150px;
-  max-height: 250px;
+  height: 25rem;
+  max-width: 25rem;
+  max-height: 15rem;
+  object-fit: cover;
+  position: relative;
+}
+.cards:hover {
+  filter: brightness(0.8);
+}
+.cards:hover::before {
+  opacity: 0.5;
+}
+.knowMoreText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.cards:hover .knowMoreText {
+  opacity: 1;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.9
+  ); /* Dark grey modal background with transparency */
+  z-index: 9999;
+}
+
+.modalContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding: 20px;
+  max-width: 800px;
+  max-height: 600px;
+  overflow: auto;
+}
+
+.modalImage {
+  flex: 1;
+  margin-right: 20px;
+  width: 25rem;
+  height: 15rem;
+}
+
+.modalImage img {
+  border-radius: 0px;
+  width: 100%;
+  height: 25rem;
+  max-width: 25rem;
+  max-height: 15rem;
+  object-fit: cover;
+  position: relative;
+}
+
+.modalInfo {
+  flex: 1;
+}
+
+.closeButton {
+  position: relative;
+  bottom: 5rem;
+  right: 10px;
+  padding: 4px;
+  background-color: red; /* Red close button color */
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.closeButtons {
+  position: relative;
+  bottom: 5rem;
+  right: 10px;
+  padding: 4px;
+  background-color: red; /* Red close button color */
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.cards:hover::after {
+  opacity: 1;
+  mix-blend-mode: normal;
 }
 .cards > p {
   font-size: 14px;
@@ -25,6 +123,9 @@
 }
 .infodiv {
   margin-bottom: 7px;
+  width: 15rem;
+  text-align: justify;
+  word-wrap: break-word;
 }
 .infodiv > p {
   margin: 0;
@@ -40,8 +141,7 @@
   transform: scale(0.75);
   cursor: pointer;
 }
-
-.cards {
+/* .cards {
   width: 75%;
   background: #fcfcfc;
   margin: 10px 40px;
@@ -52,16 +152,14 @@
   margin-right: 30px;
   color: #737373;
   box-sizing: border-box;
-}
+} */
 .cards:last-child:nth-last-child(odd) {
   grid-column: auto / span 2;
 }
-
 .cards:first-child:nth-last-child(even),
 .cards:first-child:nth-last-child(even) ~ .box {
   grid-column: auto / span 1;
 }
-
 .toggleClickBtn {
   color: #31bb6b;
   cursor: pointer;
@@ -69,7 +167,60 @@
   font-size: 12px;
   background-color: white;
 }
-
 .toggleClickBtnNone {
   display: none;
+}
+/* Menu Modal Styles */
+.menuModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7); /* Dark grey modal background */
+  z-index: 9999;
+}
+
+.menuContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding-top: 20px;
+  max-width: 700px;
+  max-height: 500px;
+  overflow: hidden;
+  position: relative;
+}
+
+.menuOptions {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menuOptions li {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  padding-left: 100px;
+  padding-right: 100px;
+  cursor: pointer;
+}
+
+.moreOptionsButton {
+  position: relative;
+  bottom: 5rem;
+  right: 10px;
+  padding: 2px;
+  background-color: transparent;
+  color: #000;
+  border: none;
+  cursor: pointer;
+}
+.list {
+  color: red;
+  cursor: pointer;
 }
