--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -15,9 +15,16 @@ $yellow: #ffc107;
 $green: #198754;
 $teal: #20c997;
 $cyan: #0dcaf0;
-
+$placeholder-bg: #f2f2f2;
 // Colors
 
 // Links
 $link-color: $blue !default;
 $link-decoration: none !default;
+
+// Inputs and buttons
+$input-bg: $placeholder-bg;
+$input-border-width: 0;
+
+$input-btn-padding-y: 0.7rem;
+$input-btn-padding-x: 1rem;
