Add Home Screen And People Screen along with other components (#940)
* Create login and register page for user portal

* Lint public locales

* Create tests for login page components

* Add react import in tests

* Create organizations screen for user portal

* Fix failing tests and lint code

* fix failing tests

* Add tests for organization screen and componenets

* Fix non-null assertions

* Fix non-null assertions in organizations test

* Fix bootstrap migration changes

* Add Home Screen along with other components

* Fix failing tests

* Add required tests and Offcanvas navbar

* Remove unused variables from tests

* Sync the Mutations with talawa-api

--- a/src/components/UserPortal/PeopleCard/PeopleCard.module.css
+++ b/src/components/UserPortal/PeopleCard/PeopleCard.module.css
@@ -10,13 +10,8 @@
   overflow: hidden;
 }
 
-.organizationDetails {
+.personDetails {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.removeDecoration {
-  text-decoration: none !important;
-  color: black;
 }
