--- a/src/components/UserPortal/OrganizationSidebar/OrganizationSidebar.module.css
+++ b/src/components/UserPortal/OrganizationSidebar/OrganizationSidebar.module.css
@@ -7,6 +7,7 @@
   /* padding-top: 20px; */
   width: 250px;
   flex-grow: 1;
+  background-color: var(--bs-white);
 }
 
 @media screen and (max-width: 900px) {
