--- a/src/components/UserPortal/UserSidebar/UserSidebar.module.css
+++ b/src/components/UserPortal/UserSidebar/UserSidebar.module.css
@@ -7,6 +7,7 @@
   padding-top: 50px;
   flex-grow: 1;
   width: 250px;
+  background-color: var(--bs-white);
 }
 
 @media screen and (max-width: 700px) {
