--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -1,366 +1,18 @@
-.mainpage {
+.pageContainer {
+  padding: 1rem 1.5rem 0 calc(300px + 2rem + 1.5rem);
+}
+
+.pageContainer .btnsContainer {
   display: flex;
-  flex-direction: row;
-}
-.sidebar {
-  z-index: 0;
-  padding-top: 5px;
-  margin: 0;
-  height: 100%;
-}
-.sidebar:after {
-  content: '';
-  background-color: #f7f7f7;
-  position: absolute;
-  width: 2px;
-  height: 600px;
-  top: 10px;
-  left: 94%;
-  display: block;
+  margin: 2.5rem 0 2.5rem 0;
 }
 
-/* .sidebarsticky:hover{
-  overflow-x:visible;
-  transition: all 0.4s ease;
-  background-color: #707070;
-
-} */
-.sidebarsticky > p {
-  margin-top: -10px;
+.pageContainer .btnsContainer input,
+.pageContainer .btnsContainer button {
+  margin: 0 0.5rem;
 }
 
-.search {
-  display: flex;
-  margin-bottom: 2rem;
-  flex-direction: column;
-  gap: 0.7rem;
-}
-
-@media screen and (min-width: 468px) {
-  .search {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-right: 40px;
-  }
-}
-
-.navitem {
-  padding-left: 27%;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  cursor: pointer;
-}
-
-.searchtitle {
-  color: #707070;
-  font-weight: 600;
-  font-size: 18px;
-  margin-top: 60px;
-  margin-bottom: 20px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 60%;
-}
-
-.search > input {
-  text-decoration: none;
-  border-color: #dbd7d7;
-  border-style: solid;
-  border-radius: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 10px;
-  padding-left: 10px;
-  box-shadow: none;
-}
-.search input:focus {
-  border-color: #fff;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  outline: none;
-}
-
-.logintitle {
-  color: #707070;
-  font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 30px;
-  padding-bottom: 5px;
-  width: 30%;
-  border-bottom: 3px solid #31bb6b;
-}
-
-.logintitleadmin {
-  color: #707070;
-  font-weight: 600;
-  font-size: 20px;
-  margin-top: 50px;
-  margin-bottom: 40px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 60%;
-}
-.admindetails {
-  display: flex;
-  justify-content: space-between;
-}
-.admindetails > p {
-  margin-top: -12px;
-  margin-right: 30px;
-}
-.mainpageright > hr {
-  margin-top: 20px;
-  width: 100%;
-  margin-left: -15px;
-  margin-right: -15px;
-  margin-bottom: 20px;
-}
-.justifysp {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.mainpageright {
-  width: 100%;
-  margin: 0 auto;
-  max-width: 92vw;
-}
-
-@media (min-width: 468px) and (max-width: 890px) {
-  .logintitle {
-    width: 90%;
-  }
-  .mainpagerightContainer {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-  }
-}
-
-@media (min-width: 900px) and (max-width: 1190px) {
-  .mainpagerightContainer {
-    border-left: 1px solid #e5e5e5;
-    width: 70%;
-    position: absolute;
-    right: 1%;
-    margin-top: -2px;
-  }
-  .youheader {
-    width: 20%;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .justifysp {
-    display: flex;
-    justify-content: space-between;
-  }
-  /* .invitebtn {
-    position: relative;
-    right: 15px;
-  } */
-  .sidebarsticky {
-    padding-left: 30px;
-    text-overflow: ellipsis;
-    /* overflow-x: hidden; */
-  }
-}
-.invitebtn {
-  border: 1px solid #e8e5e5;
-  box-shadow: 0 2px 2px #e8e5e5;
-  border-radius: 5px;
-  font-size: 16px;
-  height: 60%;
-  color: white;
-  outline: none;
-  font-weight: 600;
-  cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-  background-color: #31bb6b;
-}
-
-.flexdir {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border: none;
-}
-
-.form_wrapper {
-  margin-top: 27px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  padding: 40px 30px;
-  background: #ffffff;
-  border-color: #e8e5e5;
-  border-width: 5px;
-  border-radius: 10px;
-  max-height: 86vh;
-  overflow: auto;
-}
-
-.form_wrapper form {
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  flex-direction: column;
-}
-.titlemodal {
-  color: #707070;
-  font-weight: 600;
-  font-size: 20px;
-  margin-bottom: 20px;
-  padding-bottom: 5px;
-  border-bottom: 3px solid #31bb6b;
-  width: 65%;
-}
-
-.checkboxdiv > label {
-  margin-right: 50px;
-}
-.checkboxdiv > label > input {
-  margin-left: 10px;
-}
-.orgphoto {
-  margin-top: 5px;
-}
-.orgphoto > input {
-  margin-top: 10px;
-  cursor: pointer;
-  margin-bottom: 5px;
-}
-
-.cancel > i {
-  margin-top: 5px;
-  transform: scale(1.2);
-  cursor: pointer;
-  color: #707070;
-}
-.modalbody {
-  width: 50px;
-}
-.greenregbtn {
-  margin: 1rem 0 0;
-  margin-top: 10px;
-  border: 1px solid #e8e5e5;
-  box-shadow: 0 2px 2px #e8e5e5;
-  padding: 10px 10px;
-  border-radius: 5px;
-  background-color: #31bb6b;
-  width: 100%;
-  font-size: 16px;
-  color: white;
-  outline: none;
-  font-weight: 600;
-  cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-  width: 100%;
-}
-
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-.loader {
-  margin: 60px auto;
-  margin-top: 35vh !important;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #febc59;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
-}
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-.list_box {
-  height: 70vh;
-  overflow-y: auto;
-  width: auto;
-  padding-right: 40px;
-  /* padding: 2rem; */
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #dfdfdf;
-  border-radius: 10px;
-}
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #ffbd59;
-  border-radius: 10px;
-}
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #ffbd59;
-}
-.dispflex {
-  display: flex;
-}
-.dispflex > input {
-  width: 20%;
-  border: none;
-  box-shadow: none;
-  margin-top: 5px;
-}
-.checkboxdiv {
-  display: flex;
-}
-.checkboxdiv > div {
-  width: 50%;
-}
-
-@media only screen and (max-width: 600px) {
-  .sidebar {
-    position: relative;
-    bottom: 18px;
-  }
-  /* .invitebtn {
-    width: 135px;
-    position: relative;
-    right: 10px;
-  } */
-  .form_wrapper {
-    width: 90%;
-  }
-  .searchtitle {
-    margin-top: 30px;
-  }
+.pageContainer .btnsContainer input {
+  flex: 1;
+  margin-left: 0;
 }
