--- a/src/components/LeftDrawer/LeftDrawer.module.css
+++ b/src/components/LeftDrawer/LeftDrawer.module.css
@@ -11,6 +11,27 @@
   transition: 0.5s;
 }
 
+.activeDrawer {
+  width: calc(300px + 2rem);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  animation: comeToRightBigScreen 0.5s ease-in-out;
+}
+
+.inactiveDrawer {
+  position: fixed;
+  top: 0;
+  left: calc(-300px - 2rem);
+  bottom: 0;
+  animation: goToLeftBigScreen 0.5s ease-in-out;
+}
+
+.leftDrawer .closeModalBtn{
+  display: none;
+}
+
 .leftDrawer .talawaLogo {
   width: 100%;
   height: 65px;
@@ -130,7 +151,6 @@
   }
 }
 
-
 @media (max-width: 1120px) {
   .leftDrawer {
     width: calc(250px + 2rem);
@@ -138,16 +158,45 @@
   }
 }
 
-.activeDrawer {
-  width: calc(300px + 2rem);
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  animation: comeToRight 0.5s ease-in-out;
+/* For tablets */
+@media (max-width: 820px) {
+  .leftDrawer {
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
+  .leftDrawer .closeModalBtn{
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 10;
+  }
+  .activeDrawer {
+    opacity: 0;
+    left: 0;
+    animation: closeDrawer 0.6s ease-in-out;
+  }
+
+  .inactiveDrawer {
+    display: flex;
+    animation: openDrawer 0.8s ease-in-out;
+  }
 }
 
-@keyframes comeToRight {
+@keyframes goToLeftBigScreen {
+  from {
+    left: 0;
+  }
+
+  to {
+    opacity: 0.1;
+    left: calc(-300px - 2rem);
+  }
+}
+
+
+@keyframes comeToRightBigScreen {
   from {
     opacity: 0.4;
     left: calc(-300px - 2rem);
@@ -159,24 +208,27 @@
   }
 }
 
-.inactiveDrawer {
-  position: fixed;
-  top: 0;
-  left: calc(-300px - 2rem);
-  bottom: 0;
-  animation: goToLeft 0.5s ease-in-out;
-}
-
-@keyframes goToLeft {
+@keyframes closeDrawer {
   from {
     left: 0;
+    opacity: 1;
   }
 
   to {
-    opacity: 0.1;
-    left: calc(-300px - 2rem);
+    left: -1000px;
+    opacity: 0;
   }
-} 
+}
 
 
-/* Donne */
+@keyframes openDrawer {
+  from {
+    opacity: 0;
+    left: -1000px;
+  }
+
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
