--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -5,6 +5,16 @@
   padding: 1rem 1.5rem 0 calc(300px + 2rem + 1.5rem);
 }
 
+.expand {
+  padding-left: 1.5rem;
+  animation: moveLeft 0.5s ease-in-out;
+}
+
+.contract {
+  padding-left: calc(300px + 2rem + 1.5rem);
+  animation: moveRight 0.5s ease-in-out;
+}
+
 .pageContainer .btnsContainer {
   display: flex;
   margin: 2.5rem 0 2.5rem 0;
@@ -39,6 +49,10 @@
   flex: 1;
 }
 
+.pageContainer .listBox .itemCard {
+  width: 50%;
+}
+
 .pageContainer .listBox .notFound {
   flex: 1;
   display: flex;
@@ -47,10 +61,13 @@
   flex-direction: column;
 }
 
-
 @media (max-width: 1120px) {
-  .pageContainer {
-    padding: 1rem 1.5rem 0 calc(250px + 2rem + 1.5rem);
+  .contract {
+    padding-left: calc(250px + 2rem + 1.5rem);
+  }
+
+  .pageContainer .listBox .itemCard {
+    width: 100%;
   }
 }
 
@@ -74,9 +91,46 @@
   }
 }
 
-.expand {
-  padding-left: 1.5rem;
-  animation: moveLeft 0.5s ease-in-out;
+
+/* For tablets */
+@media (max-width: 820px) {
+  .pageContainer {
+    padding-left: 1.5rem;
+  }
+
+  .contract,
+  .expand {
+    animation: none;
+  }
+}
+
+@media (max-width: 820px) {
+  .pageContainer {
+    padding: 1rem;
+  }
+}
+
+/* For mobile devices  */
+
+@media (max-width: 520px) {
+  .pageContainer .btnsContainer {
+    margin-bottom: 0;
+  }
+
+  .pageContainer .btnsContainer .btnsBlock {
+    display: block;
+    margin-top: 1rem;
+  }
+  .pageContainer .btnsContainer .btnsBlock button:nth-child(1) {
+    margin-right: 0.5rem;
+  }
+  .pageContainer .btnsContainer .btnsBlock button:nth-child(2) {
+    margin-right: 0;
+  }
+  .pageContainer .btnsContainer .btnsBlock button {
+    margin-bottom: 1rem;
+    width: 100%;
+  }
 }
 
 @keyframes moveLeft {
@@ -89,14 +143,9 @@
   }
 }
 
-.contract {
-  padding-left: calc(300px + 2rem + 1.5rem);
-  animation: moveRight 0.5s ease-in-out;
-}
-
 @keyframes moveRight {
   from {
-    padding-left: 1.5rem
+    padding-left: 1.5rem;
   }
 
   to {
