--- a/src/components/LeftDrawer/LeftDrawer.module.css
+++ b/src/components/LeftDrawer/LeftDrawer.module.css
@@ -28,7 +28,7 @@
   animation: goToLeftBigScreen 0.5s ease-in-out;
 }
 
-.leftDrawer .closeModalBtn{
+.leftDrawer .closeModalBtn {
   display: none;
 }
 
@@ -105,11 +105,13 @@
 
 .shine {
   background: #f6f7f8;
-  background-image: linear-gradient(to right,
-      #f6f7f8 0%,
-      #edeef1 20%,
-      #f6f7f8 40%,
-      #f6f7f8 100%);
+  background-image: linear-gradient(
+    to right,
+    #f6f7f8 0%,
+    #edeef1 20%,
+    #f6f7f8 40%,
+    #f6f7f8 100%
+  );
   background-repeat: no-repeat;
   background-size: 800px 104px;
   display: inline-block;
@@ -165,7 +167,7 @@
     left: 0;
     right: 0;
   }
-  .leftDrawer .closeModalBtn{
+  .leftDrawer .closeModalBtn {
     display: block;
     position: absolute;
     top: 1rem;
@@ -195,7 +197,6 @@
   }
 }
 
-
 @keyframes comeToRightBigScreen {
   from {
     opacity: 0.4;
@@ -219,7 +220,6 @@
     opacity: 0;
   }
 }
-
 
 @keyframes openDrawer {
   from {
