--- a/src/components/OrgPostCard/OrgPostCard.module.css
+++ b/src/components/OrgPostCard/OrgPostCard.module.css
@@ -4,12 +4,16 @@
 .cards > h3 {
   font-size: 17px;
 }
+.card {
+  width: 100%;
+  height: 20rem;
+}
 .postimage {
   border-radius: 0px;
   width: 100%;
-  height: 25rem;
-  max-width: 25rem;
-  max-height: 15rem;
+  height: 12rem;
+  max-width: 20rem;
+  max-height: 12rem;
   object-fit: cover;
   position: relative;
 }
@@ -80,11 +84,24 @@
   object-fit: cover;
   position: relative;
 }
-
 .modalInfo {
   flex: 1;
 }
-
+.title {
+  font-size: 16px;
+  color: #000;
+  font-weight: 600;
+}
+.text {
+  font-size: 13px;
+  color: #000;
+  font-weight: 300;
+}
+.author {
+  color: #737373;
+  font-weight: 100;
+  font-size: 13px;
+}
 .closeButton {
   position: relative;
   bottom: 5rem;
