--- a/src/screens/OrgPost/OrgPost.module.css
+++ b/src/screens/OrgPost/OrgPost.module.css
@@ -149,10 +149,11 @@
 .justifysp {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
 }
 @media screen and (max-width: 575.5px) {
   .justifysp {
-    padding-left: 55px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -168,7 +169,7 @@
   border-radius: 5px;
   font-size: 16px;
   height: 60%;
-  width: 20%;
+  width: 60%;
   color: white;
   outline: none;
   font-weight: 600;
