--- a/src/screens/OrgList/OrgList.module.css
+++ b/src/screens/OrgList/OrgList.module.css
@@ -219,6 +219,34 @@
   border-bottom: 3px solid #31bb6b;
   width: 65%;
 }
+.titlemodaldialog {
+  color: #707070;
+  font-size: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+}
+form label {
+  font-weight: bold;
+  padding-bottom: 1px;
+  font-size: 14px;
+  color: #707070;
+}
+
+form > input {
+  display: block;
+  margin-bottom: 20px;
+  border: 1px solid #e8e5e5;
+  box-shadow: 2px 1px #e8e5e5;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background: none;
+  width: 100%;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
 
 .checkboxdiv > label {
   margin-right: 50px;
@@ -244,6 +272,10 @@
 .modalbody {
   width: 50px;
 }
+.pluginStoreBtnContainer {
+  display: flex;
+  gap: 1rem;
+}
 .greenregbtn {
   margin: 1rem 0 0;
   margin-top: 10px;
@@ -255,6 +287,26 @@
   width: 100%;
   font-size: 16px;
   color: white;
+  outline: none;
+  font-weight: 600;
+  cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.2s;
+  width: 100%;
+}
+.secondbtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 0;
+  margin-top: 10px;
+  border: 1px solid #d0cfcf;
+  box-shadow: 0 2px 2px #d0cfcf;
+  padding: 10px 10px;
+  border-radius: 5px;
+  background-color: white;
+  width: 100%;
+  font-size: 16px;
+  color: #31bb6b;
   outline: none;
   font-weight: 600;
   cursor: pointer;
