--- a/src/screens/UserPortal/People/People.module.css
+++ b/src/screens/UserPortal/People/People.module.css
@@ -6,6 +6,10 @@
   color: white;
 }
 
+.backgroundWhite {
+  background-color: white;
+}
+
 .maxWidth {
   max-width: 300px;
 }
@@ -36,7 +40,7 @@
 }
 
 .containerHeight {
-  height: calc(100vh - 61px);
+  height: calc(100vh - 66px);
 }
 
 .colorPrimary {
