--- a/src/components/LeftDrawer/LeftDrawer.module.css
+++ b/src/components/LeftDrawer/LeftDrawer.module.css
@@ -54,6 +54,7 @@
   text-align: start;
   margin-bottom: 0.8rem;
   border-radius: 8px;
+  border: 1px solid var(--bs-gray-200);
 }
 
 .leftDrawer .optionList button .iconWrapper {
